--- a/src/styles/base/common.scss
+++ b/src/styles/base/common.scss
@@ -1,14 +1,15 @@
 :root {
-  --primary: #131720;
-  --blue: #2f80ed;
-  --color-text: #ffffff;
-}
+  --gray-100: #7285a2;
+  --gray-200: #929292;
 
-// [data-theme='light'] {
-//   --primary: #ffffff;
-//   --blue: #2f80ed;
-//   --color-text: #131720;
-// }
+  --navy-100: #29364b;
+  --navy-200: #151f30;
+
+  --primary: #2f80ed;
+
+  --white: #ffffff;
+  --black: #131720;
+}
 
 * {
   box-sizing: inherit;
@@ -35,7 +36,9 @@ body {
     "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: var(--primary);
+  line-height: 1.4;
+  color: var(--white);
+  background: var(--black);
 }
 
 #root {
@@ -61,33 +64,88 @@ body {
   flex-direction: column;
 }
 
+.section {
+  padding: 75px 0;
+
+  @media (max-width: 767px) {
+    padding: 50px 0;
+  }
+
+  &--no-indent {
+    padding: 0;
+  }
+}
+
+p {
+  margin: 0 0 24px;
+}
+
+.btn {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  gap: 10px;
+  max-width: max-content;
+  padding: 15px 30px;
+  color: var(--white);
+  background-color: var(--primary);
+  border-radius: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 0.5px;
+  text-decoration: none;
+  transition: background-color 0.3s;
+  cursor: pointer;
+
+  @media (max-width: 767px) {
+    padding: 15px 20px;
+    font-size: 16px;
+  }
+
+  @media (hover: hover) {
+    &:hover {
+      background-color: #2966ba;
+    }
+  }
+
+  svg {
+    width: 20px;
+    height: 20px;
+
+    @media (max-width: 767px) {
+      width: 16px;
+      height: 16px;
+    }
+  }
+}
+
 .movies {
   position: relative;
-  gap: 2rem 1.5rem;
+  gap: 32px 24px;
   display: flex;
   flex-wrap: wrap;
 
   @media (max-width: 767px) {
-    gap: 2rem 1rem;
+    gap: 32px 16px;
   }
 
   &.no-results {
     display: block;
   }
 
-  .movie {
-    width: calc((100% - (4 * 1.5rem)) / 5);
+  &__item {
+    width: calc((100% - (4 * 24px)) / 5);
 
     @media (max-width: 1199px) {
-      width: calc((100% - (3 * 1.5rem)) / 4);
+      width: calc((100% - (3 * 24px)) / 4);
     }
 
     @media (max-width: 991px) {
-      width: calc((100% - (2 * 1.5rem)) / 3);
+      width: calc((100% - (2 * 24px)) / 3);
     }
 
     @media (max-width: 767px) {
-      width: calc((100% - (1 * 1rem)) / 2);
+      width: calc((100% - (1 * 16px)) / 2);
     }
   }
 }
@@ -101,10 +159,10 @@ body {
   align-items: center;
   justify-content: space-between;
   gap: 20px;
-  padding: 1rem;
-  background-color: #151f30;
+  padding: 16px;
+  background-color: var(--navy-200);
   border-radius: 16px;
-  margin: 2rem 0;
+  margin: 32px 0;
 
   @media (max-width: 767px) {
     flex-direction: column;
@@ -130,11 +188,11 @@ body {
     }
 
     select {
-      padding: 0.5rem 1rem;
+      padding: 8px 16px;
       width: calc(100% + 20px);
       border-radius: 10px;
-      border: 1px solid var(--primary);
-      color: var(--color-text);
+      border: 1px solid var(--black);
+      color: var(--white);
       appearance: none;
       -webkit-appearance: none;
       -moz-appearance: none;
@@ -145,11 +203,104 @@ body {
       background-position: right;
       background-origin: content-box;
       outline: none;
-      background-color: var(--primary);
+      background-color: var(--black);
       font-size: 14px;
 
       @media (max-width: 767px) {
         width: 100%;
+      }
+    }
+  }
+}
+
+.modal {
+  position: relative;
+  background: var(--navy-200);
+  border-radius: 8px;
+  max-width: 80%;
+  width: 100%;
+  overflow-y: auto;
+
+  @media (max-width: 1199px) {
+    max-width: 90%;
+  }
+
+  &-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.3s;
+    z-index: 1000;
+
+    &.open {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
+
+  &__header {
+    padding: 20px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: var(--black);
+
+    @media (max-width: 1023px) {
+      padding: 20px;
+    }
+  }
+
+  &__title {
+    font-size: 24px;
+    margin: 0;
+  }
+
+  &__close {
+    cursor: pointer;
+    padding: 0;
+    display: flex;
+    transition: opacity 0.3s;
+
+    @media (hover: hover) {
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+
+  &__content {
+    padding: 20px 40px;
+    max-height: 80vh;
+    overflow-y: auto;
+
+    @media (max-width: 1023px) {
+      padding: 20px;
+    }
+
+    h3 {
+      font-size: 24px;
+      margin: 0 0 10px;
+    }
+
+    .video {
+      position: relative;
+      padding-top: 50%;
+
+      iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border: 0;
       }
     }
   }
