--- a/src/styles/components/loader-line.scss
+++ b/src/styles/components/loader-line.scss
@@ -3,7 +3,7 @@
   height: 3px;
   position: relative;
   overflow: hidden;
-  background-color: #151f30;
+  background-color: var(--navy-200);
   margin: 20px auto;
   -webkit-border-radius: 20px;
   -moz-border-radius: 20px;
@@ -15,7 +15,7 @@
     left: -50%;
     height: 3px;
     width: 40%;
-    background-color: var(--blue);
+    background-color: var(--primary);
     -webkit-animation: lineAnim 1s linear infinite;
     -moz-animation: lineAnim 1s linear infinite;
     animation: lineAnim 1s linear infinite;
