--- a/src/styles/components/movie-list.scss
+++ b/src/styles/components/movie-list.scss
@@ -9,7 +9,7 @@
   gap: 12px;
   padding: 5px;
   border-radius: 16px;
-  background: var(--primary);
+  background: var(--black);
 
   @media (max-width: 767px) {
     width: 100%;
@@ -33,8 +33,8 @@
 
     &.active {
       button {
-        color: var(--blue);
-        background-color: #151f30;
+        color: var(--primary);
+        background-color: var(--navy-200);
         font-size: 14px;
         border-radius: 12px;
       }
@@ -44,7 +44,7 @@
       width: 100%;
       background: none;
       border: none;
-      color: var(--color-text);
+      color: var(--white);
       text-align: left;
       padding: 8px 10px;
       position: relative;
