--- a/src/styles/components/no-results.scss
+++ b/src/styles/components/no-results.scss
@@ -4,11 +4,11 @@
   align-items: center;
   text-align: center;
   width: 100%;
-  color: var(--color-text);
-  padding: 8rem 0;
+  color: var(--white);
+  padding: 130px 0;
 
   &__icon {
-    margin: 1rem 0 2rem;
+    margin: 16px 0 32px;
     position: relative;
 
     img {
@@ -50,13 +50,13 @@
     position: relative;
 
     h4 {
-      font-size: 2.5rem;
-      margin: 0 0 0.2rem;
+      font-size: 40px;
+      margin: 0 0 4px;
       font-weight: 700;
 
       @media (max-width: 767px) {
-        font-size: 2rem;
-        margin: 0 0 0.5rem;
+        font-size: 32px;
+        margin: 0 0 8px;
       }
     }
   }
