--- a/src/styles/components/pagination.scss
+++ b/src/styles/components/pagination.scss
@@ -9,31 +9,27 @@
   flex-wrap: wrap;
 
   button {
-    color: var(--color-text);
+    color: var(--white);
     padding: 0;
     display: flex;
     align-items: center;
     justify-content: center;
     border: none;
-    background-color: #151f30;
+    background-color: var(--navy-200);
     width: 100%;
     height: 100%;
-
-    svg {
-      height: 15px;
-      width: 15px;
-    }
   }
 
   .ellipsis {
-    color: var(--color-text);
+    color: var(--white);
   }
 
   li {
     width: 40px;
     height: 40px;
+
     &.disabled {
-      cursor: not-allowed;
+      cursor: default;
 
       button {
         opacity: 0.5;
@@ -43,8 +39,8 @@
 
     &.active {
       button {
-        color: var(--color-text);
-        background: var(--blue);
+        color: var(--white);
+        background: var(--primary);
       }
     }
   }
