--- a/src/styles/layouts/footer.scss
+++ b/src/styles/layouts/footer.scss
@@ -1,7 +1,8 @@
 footer {
-  background-color: #151f30;
+  background-color: var(--navy-200);
+  border-top: 1px solid var(--navy-100);
   padding: 20px 0;
-  color: var(--color-text);
+  color: var(--white);
   font-size: 14px;
 
   .container {
@@ -12,7 +13,7 @@ footer {
 
     @media (max-width: 667px) {
       flex-direction: column;
-      padding: 25px 0;
+      gap: 15px;
     }
   }
 
@@ -24,12 +25,12 @@ footer {
     gap: 5px;
     font-size: 22px;
     text-decoration: none;
-    color: var(--color-text);
+    color: var(--white);
     font-weight: 700;
     line-height: 1;
 
     span {
-      color: var(--blue);
+      color: var(--primary);
       font-size: 14px;
     }
 
@@ -46,9 +47,16 @@ footer {
     }
 
     a {
-      color: var(--color-text);
+      color: var(--white);
       text-decoration: none;
       margin-left: 5px;
+      transition: opacity 0.3s;
+
+      @media (hover: hover) {
+        &:hover {
+          opacity: 0.7;
+        }
+      }
     }
   }
 }
